🐜 Fixed scale projection at wrong z-index

--- a/src/sass/X/apps_container.sass
+++ b/src/sass/X/apps_container.sass
@@ -26,6 +26,7 @@ app_container //This resides in the apps_container.
     border-radius: 8px 8px 0px 0px
     transform: scale(1)
     overflow: hidden
+    z-index: 4
     opacity: 1
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out
 
@@ -193,6 +194,7 @@ window_size_projection
     position: absolute
     display: inline-block
     background-color: var(--select-color)
+    z-index: 4
     top: 0px
     left: 0px
     height: 0px
